# model1_baseline_agent_bundle

./: .gitignore  AGENTS.md  CHANGELOG.md  PROJECT_PLAN.md  README.md  pyproject.toml
config/: model1_evaluate.json  model1_evaluate_mcmc.json  model1_evaluate_mcmc_full.json  model1_evaluate_mcmc_strict.json  model1_fit.json  model1_fit_mcmc.json  model1_fit_mcmc_full.json  model1_fit_mcmc_strict.json  model1_item_stress_fit.json  model1_item_stress_online_evaluate_test.json  model1_preprocess.json  model1_track_b_evaluate_test.json  model1_track_b_evaluate_validation.json  model1_track_b_fit.json  model1_track_b_item_stress_split.json  model1_track_b_online_evaluate_test.json  model1_track_b_online_evaluate_validation.json  model1_track_b_split.json  model2_evaluate.json  model2_evaluate_mcmc.json  model2_evaluate_mcmc_strict.json  model2_fit.json  model2_fit_mcmc.json  model2_fit_mcmc_strict.json  model2_track_b_evaluate_test.json  model2_track_b_evaluate_validation.json  model2_track_b_fit.json  model2_track_b_fit_fullrank.json  model2_track_b_online_evaluate_test.json  model2_track_b_online_evaluate_validation.json  model2_track_b_online_fullrank_evaluate_test.json  model3_evaluate.json  model3_fit.json  model3_track_b_evaluate_test.json  model3_track_b_evaluate_validation.json  model3_track_b_fit.json  model3_track_b_fit_bin20.json  model3_track_b_fit_bin5.json  model3_track_b_fit_seed_alt.json  model3_track_b_online_bin20_evaluate_test.json  (+81 more)
reports/: adaptive_policy_comparison.md  adaptive_policy_suite_comparison.md  calibrated_policy_suite_decision.md  (+52 more)
(+58 files in other folders)
