[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "model1-baseline-agent-bundle"
version = "0.1.0"
description = "Model 1 baseline pipeline for DBE-KT22 learner-response data."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "requests",
  "pandas",
  "pyarrow",
  "matplotlib",
  "scikit-learn",
  "pymc",
  "bambi",
  "arviz",
]

[tool.setuptools]
py-modules = []
